--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
+[env:esp32]
+platform = espressif32
+board = esp32dev
+framework = arduino
+
+lib_deps =
+    Adafruit PN532
+
+
+[env:esp8266]
 platform = espressif8266
 board = esp12e
 framework = arduino
 
+lib_deps =
+    Adafruit PN532
