--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-
+monitor_speed = 115200
 lib_deps =
-    Adafruit PN532
-
-
-[env:esp8266]
-platform = espressif8266
-board = esp12e
-framework = arduino
-
-lib_deps =
-    Adafruit PN532
+;    https://github.com/Seeed-Studio/PN532
+;    https://github.com/don/NDEF
