--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-;PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -13,7 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps =
-    https://github.com/ozbotics/WIFIMANAGER-ESP32
-    https://github.com/bblanchon/ArduinoJson
-    U8g2
+upload_port = /dev/ttyUSB0
+lib_deps = 
+	https://github.com/ozbotics/WIFIMANAGER-ESP32
+	https://github.com/bblanchon/ArduinoJson
+	adafruit/Adafruit NeoPixel@^1.15.1
